--- a/app/src/main/res/layout/activity_interaional_call.xml
+++ b/app/src/main/res/layout/activity_interaional_call.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/call_layout"
+    android:id="@+id/international_call_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".CallActivity">
+    android:orientation="vertical">
 
     <EditText
-        android:id="@+id/input_number_call"
+        android:id="@+id/input_prefix_number"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:inputType="phone" />
+
+    <EditText
+        android:id="@+id/input_inter_phone_number"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
@@ -18,7 +24,7 @@
         android:inputType="phone" />
 
     <Button
-        android:id="@+id/btn_compose_call"
+        android:id="@+id/btn_compose_inter_call"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -27,7 +33,7 @@
         android:text="@string/compose" />
 
     <Button
-        android:id="@+id/btn_make_call"
+        android:id="@+id/btn_make_inter_call"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
