--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,12 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+    <Button
+        android:id="@+id/direct_to_international_call"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="@string/direct_to_international_call"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
 </LinearLayout>
