--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -15,19 +15,18 @@
         android:layout_marginTop="50dp"
         android:autofillHints="phone"
         android:hint="@string/enter_phone_number"
-        android:inputType="phone"
-        android:textColor="@color/black" />
+        android:inputType="phone"/>
 
     <EditText
+
         android:id="@+id/input_text_message"
         android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="90dp"
         android:autofillHints="phone"
         android:hint="@string/enter_sms_text"
-        android:inputType="textMultiLine"
-        android:textColor="@color/black" />
+        android:inputType="textMultiLine" />
 
     <Button
         android:id="@+id/btn_send_message"
