Add Info button for watching both different prefixes and international numbers.

--- a/app/src/main/res/layout/activity_interntional_number.xml
+++ b/app/src/main/res/layout/activity_interntional_number.xml
@@ -106,13 +106,26 @@
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/select_number"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
-        android:text="@string/select_prefix" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal"
+        android:gravity="center|top">
 
+        <Button
+            android:id="@+id/select_number"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_margin="30dp"
+            android:text="@string/select_prefix" />
+        <Button
+            android:id="@+id/show_number_info"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_margin="30dp"
+            android:text="@string/show_information" />
+    </LinearLayout>
 </LinearLayout>
